# ZettaiPlot

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  project.md  pyproject.toml
assets/split/: manifest.json
docs/: api.md  api.zh-CN.md
examples/: quickstart.ipynb
scripts/: preview_grouped_sockbar.py  preview_leg_spacing.py  preview_sock_textures.py  split_leg_assets.py
src/zettaiplot/: __init__.py  _pillow.py  artists.py  assets.py  bar.py  data.py  layout.py  legend.py
src/zettaiplot/textures/: __init__.py  blend.py  colors.py  geometry.py  masks.py  presets.py  renderers.py  specs.py
tests/: test_assets.py  test_sockbar.py  test_textures.py
