[project]
name = "zettaiplot"
version = "0.1.0"
description = "Anime-aesthetic bar chart library — data encoded as sock coverage height on stylized leg assets"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "xie-huaaaan" },
]
keywords = [
    "matplotlib",
    "data-visualization",
    "bar-chart",
    "anime",
    "procedural-generation",
    "zettai-ryouiki",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/xie-huaaaan/ZettaiPlot"
Documentation = "https://github.com/xie-huaaaan/ZettaiPlot/blob/main/docs/api.md"
"Bug Tracker" = "https://github.com/xie-huaaaan/ZettaiPlot/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.uv]
resolution = "lowest-direct"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zettaiplot = ["assets/**/*.json", "assets/**/*.png"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests", "scripts"]
